@@ -1,6 +1,7 @@
 2021-11-23
 
   * fix ally placement when some players are not assigned a team
+  * add Cantabrian Highlands TG (random map)
 
 2021-11-15
 
